--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "serve:rinkeby": "NODE_ENV=false vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test": "NODE_ENV=true truffle test",
-    "deploy:rinkeby": "truffle migrate -f 2 --network rinkeby",
+    "test": "truffle test",
+    "deploy:rinkeby": "truffle migrate --network rinkeby",
     "deploy:local": "truffle migrate --reset"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "@openzeppelin/contracts": "^3.4.1",
+    "@truffle/hdwallet-provider": "^1.4.0",
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
@@ -23,7 +24,6 @@
     "regenerator-runtime": "^0.13.7",
     "solc": "^0.8.2",
     "truffle": "5.0.5",
-    "truffle-hdwallet-provider": "^1.0.17",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2",
